[gd_scene load_steps=62 format=3 uid="uid://cegwqrocs03x5"]

[ext_resource type="Texture2D" uid="uid://bwpd510ja18pe" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/1-Idle (sprite sheet 63x67).png" id="1_q7blv"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/bold_pirate.gd" id="1_sk41o"]
[ext_resource type="Texture2D" uid="uid://d2m7uaadwwihj" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/7-Attack (sprite sheet 63x67).png" id="2_m4g5g"]
[ext_resource type="Script" path="res://src/scripts/StateMachine/state_machine.gd" id="2_ynlea"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/air_state.gd" id="3_jey7g"]
[ext_resource type="Texture2D" uid="uid://cyt47718sbry7" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/10-Dead Ground (sprite sheet 63x67).png" id="3_l2jta"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/ground_state.gd" id="3_s3205"]
[ext_resource type="Texture2D" uid="uid://1jumoh1fjtm2" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/9-Dead Hit (sprite sheet 63x67).png" id="4_tsewf"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/chase_state.gd" id="5_b07xw"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/landing_state.gd" id="5_jtv54"]
[ext_resource type="Texture2D" uid="uid://ju8lmni6h123" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/5-Fall (sprite sheet 63x67).png" id="5_owdkx"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/attack_state.gd" id="6_rvwbt"]
[ext_resource type="Texture2D" uid="uid://celoo8sieu37v" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/6-Ground (sprite sheet 63x67).png" id="6_xcre0"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/hit_state.gd" id="7_e85qk"]
[ext_resource type="Texture2D" uid="uid://co80spsevnviw" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/8-Hit (sprite sheet 63x67).png" id="7_jvxyf"]
[ext_resource type="Script" path="res://src/scripts/enemies/bold_pirate/dead_state.gd" id="8_3x1l4"]
[ext_resource type="Texture2D" uid="uid://doydku4k3wux0" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/4-Jump (sprite sheet 63x67).png" id="8_scoqf"]
[ext_resource type="Texture2D" uid="uid://dghqpcdn4yiel" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/3-Jump Anticipation (sprite sheet 63x67).png" id="9_jp7gb"]
[ext_resource type="Texture2D" uid="uid://crf10fk80qmso" path="res://assets/Pirate Bomb/Sprites/2-Enemy-Bald Pirate/2-Run (sprite sheet 63x67).png" id="10_pp373"]
[ext_resource type="PackedScene" uid="uid://d2oqwc7qpajsp" path="res://src/scenes/damageable.tscn" id="11_n1uhc"]
[ext_resource type="PackedScene" uid="uid://chx3pajfqj5y3" path="res://src/scenes/state_debug_label.tscn" id="20_2i76p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovytf"]
size = Vector2(20, 31)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mp6dl"]
radius = 14.0
height = 60.0

[sub_resource type="Animation" id="Animation_hoedp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_q7blv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1kf7e"]
resource_name = "attack"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_m4g5g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_14g11"]
resource_name = "dead_ground"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l2jta")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_y46rg"]
resource_name = "dead_hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_tsewf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ftm42"]
resource_name = "fall"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_owdkx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_lflmc"]
resource_name = "ground"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_xcre0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_uxais"]
resource_name = "hit"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_jvxyf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_f4wmf"]
resource_name = "idle"
length = 1.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_q7blv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_rkilb"]
resource_name = "jump"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_scoqf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_2bko5"]
resource_name = "jump_start"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_jp7gb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2c7xa"]
resource_name = "run"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_pp373")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t72et"]
_data = {
"RESET": SubResource("Animation_hoedp"),
"attack": SubResource("Animation_1kf7e"),
"dead_ground": SubResource("Animation_14g11"),
"dead_hit": SubResource("Animation_y46rg"),
"fall": SubResource("Animation_ftm42"),
"ground": SubResource("Animation_lflmc"),
"hit": SubResource("Animation_uxais"),
"idle": SubResource("Animation_f4wmf"),
"jump": SubResource("Animation_rkilb"),
"jump_start": SubResource("Animation_2bko5"),
"run": SubResource("Animation_2c7xa")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x745v"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a31qg"]
animation = &"dead_ground"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83y6o"]
animation = &"dead_hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5njv2"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hhsb5"]
animation = &"ground"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c055g"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w0wiu"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7kp2x"]
animation = &"jump_start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gg1wu"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wc2bo"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hy3k"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_f8ibo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gg1wu")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_wc2bo")
blend_point_1/pos = -1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_6hy3k")
blend_point_2/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dbsmx"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lsxdr"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h4h1n"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ckxde"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5njb7"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y2731"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6u32f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qavd4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ykqks"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d7eb5"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nrvxc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nixoy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8d4iy"]
states/attack/node = SubResource("AnimationNodeAnimation_x745v")
states/attack/position = Vector2(535.963, 203.296)
states/dead_ground/node = SubResource("AnimationNodeAnimation_a31qg")
states/dead_ground/position = Vector2(387.066, 278.333)
states/dead_hit/node = SubResource("AnimationNodeAnimation_83y6o")
states/dead_hit/position = Vector2(386.506, 202.778)
states/fall/node = SubResource("AnimationNodeAnimation_5njv2")
states/fall/position = Vector2(535, -56.6667)
states/ground/node = SubResource("AnimationNodeAnimation_hhsb5")
states/ground/position = Vector2(534.778, 100.296)
states/hit/node = SubResource("AnimationNodeAnimation_c055g")
states/hit/position = Vector2(263.667, 202.333)
states/jump/node = SubResource("AnimationNodeAnimation_w0wiu")
states/jump/position = Vector2(386.259, -57.3333)
states/jump_start/node = SubResource("AnimationNodeAnimation_7kp2x")
states/jump_start/position = Vector2(387.889, 27.3333)
states/move/node = SubResource("AnimationNodeBlendSpace1D_f8ibo")
states/move/position = Vector2(389, 100.778)
transitions = ["ground", "move", SubResource("AnimationNodeStateMachineTransition_dbsmx"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_lsxdr"), "hit", "move", SubResource("AnimationNodeStateMachineTransition_h4h1n"), "jump_start", "jump", SubResource("AnimationNodeStateMachineTransition_ckxde"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_5njb7"), "fall", "ground", SubResource("AnimationNodeStateMachineTransition_y2731"), "move", "fall", SubResource("AnimationNodeStateMachineTransition_6u32f"), "move", "jump_start", SubResource("AnimationNodeStateMachineTransition_qavd4"), "move", "dead_hit", SubResource("AnimationNodeStateMachineTransition_ykqks"), "hit", "dead_hit", SubResource("AnimationNodeStateMachineTransition_d7eb5"), "dead_hit", "dead_ground", SubResource("AnimationNodeStateMachineTransition_nrvxc"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_nixoy")]
graph_offset = Vector2(-293, -81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1arep"]
size = Vector2(170, 58)

[node name="Bold Pirate" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_sk41o")

[node name="pivot" type="Marker2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="pivot"]
position = Vector2(0, -22)
texture = ExtResource("1_q7blv")
hframes = 34

[node name="HitArea" type="Area2D" parent="pivot"]
collision_layer = 0
collision_mask = 18
monitorable = false

[node name="CollisionHit" type="CollisionShape2D" parent="pivot/HitArea"]
position = Vector2(25, -8.5)
shape = SubResource("RectangleShape2D_ovytf")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CapsuleShape2D_mp6dl")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("2_ynlea")
character = NodePath("..")
animation_tree = NodePath("../AnimTree")
current_state = NodePath("Ground")

[node name="Ground" type="Node" parent="StateMachine" node_paths=PackedStringArray("detect_area", "air_state", "chase_state")]
script = ExtResource("3_s3205")
detect_area = NodePath("../../DetectArea")
air_state = NodePath("../Air")
chase_state = NodePath("../Chase")
can_move = false

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("detect_area", "ground_state", "attack_state", "attack_timer")]
script = ExtResource("5_b07xw")
detect_area = NodePath("../../DetectArea")
ground_state = NodePath("../Ground")
attack_state = NodePath("../Attack")
attack_timer = NodePath("../../AttackTimer")

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("3_jey7g")
landing_state = NodePath("../Landing")

[node name="Landing" type="Node" parent="StateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("5_jtv54")
ground_state = NodePath("../Ground")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("chase_state", "hit_area", "attack_timer")]
script = ExtResource("6_rvwbt")
chase_state = NodePath("../Chase")
hit_area = NodePath("../../pivot/HitArea")
attack_timer = NodePath("../../AttackTimer")
can_move = false

[node name="Hit" type="Node" parent="StateMachine" node_paths=PackedStringArray("damageable", "ground_state", "dead_state")]
script = ExtResource("7_e85qk")
damageable = NodePath("../../Damageable")
ground_state = NodePath("../Ground")
dead_state = NodePath("../Dead")
can_move = false

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_3x1l4")
can_move = false

[node name="Damageable" parent="." instance=ExtResource("11_n1uhc")]
health = 2.0

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t72et")
}

[node name="AnimTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_8d4iy")
anim_player = NodePath("../Anim")
parameters/move/blend_position = 0

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2(0, -26)
collision_layer = 0
collision_mask = 18
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_1arep")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="StateDebugLabel" parent="." node_paths=PackedStringArray("state_machine") instance=ExtResource("20_2i76p")]
offset_left = -54.0
offset_top = -85.0
offset_right = 53.0
offset_bottom = -59.0
state_machine = NodePath("../StateMachine")
